crates/oro-shim-bin/tests/snapshots/shim_bin__from.env.multiple.variables.snap
---
source: crates/node-maintainer/tests/shim_bin.rs
expression: "std::fs::read_to_string(&to).unwrap().replace('\\r', \"\\\\r\")"
---
#!/bin/sh
basedir = $(dirname "$(echo "$0" | sed -e 's,\\,/,g')")

case `uname` in
    *CYGWIN*|*MINGW*|*MSYS*) basedir=`cygpath -w "$basedir"`;;
esac

if [ -x "$basedir/node" ]; then
  exec key=value key2=value2 "$basedir/node"  --flag-one --flag-two "$basedir/../from.env.multiple.variables" "$@"
else 
  exec key=value key2=value2 node  --flag-one --flag-two "$basedir/../from.env.multiple.variables" "$@"
fi

