crates/oro-shim-bin/tests/snapshots/shim_bin__from.sh.cmd.snap
---
source: crates/node-maintainer/tests/shim_bin.rs
expression: "std::fs::read_to_string(to.with_extension(\"cmd\")).unwrap().replace('\\r',\n    \"\\\\r\")"
---
@ECHO off\r
GOTO start\r
:find_dp0\r
SET dp0=%~dp0\r
EXIT /b\r
:start\r
SETLOCAL\r
CALL :find_dp0\r
\r
IF EXISTS "%dp0%\/usr/bin/sh.exe" (\r
  SET "_prog=%dp0%\/usr/bin/sh.exe"\r
) ELSE (\r
  SET "_prog=/usr/bin/sh"\r
  SET PATHEXT=%PATHEXT:;.JS;=;%\r
)\r
\r
endLocal & goto #_undefined_# 2>NUL || title %COMSPEC% & "%_prog%"  "%dp0%\..\from.sh" %*\r

