crates/oro-shim-bin/tests/snapshots/shim_bin__from.sh.ps1.snap
---
source: crates/node-maintainer/tests/shim_bin.rs
expression: "std::fs::read_to_string(to.with_extension(\"ps1\")).unwrap().replace('\\r',\n    \"\\\\r\")"
---
#!/usr/bin/env pwsh
$basedir=Split-Path $MyInvocation.MyCommand.Definition -Parent

$exe=""
if ($PSVersionTable.PSVersion -lt "6.0" -or $IsWindows) {
  # Fix case when both the Windows and Linux builds of Node
  # are installed in the same directory
  $exe=".exe"
}
$ret=0
if (Test-Path "$basedir//usr/bin/sh$exe") {
  # Support pipeline input
  if ($MyInvocation.ExpectingInput) {
    $input | & "$basedir//usr/bin/sh$exe"  "$basedir/../from.sh" $args
  } else {
    & "$basedir//usr/bin/sh$exe"  "$basedir/../from.sh" $args
  }
  $ret=$LASTEXITCODE
} else {
  # Support pipeline input
  if ($MyInvocation.ExpectingInput) {
    $input | & "/usr/bin/sh"$exe  "$basedir/../from.sh" $args
  } else {
    & "/usr/bin/sh"$exe  "$basedir/../from.sh" $args
  }
  $ret=$LASTEXITCODE
}
exit $ret

